# brickwright-lite

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  package.json  vercel.json
.github/workflows/: build.yml  mobile.yml  release.yml  tauri.yml
apps/: README.md
apps/tauri/: .gitignore  package-lock.json  package.json
apps/tauri/android-overlay/: MainActivity.kt
apps/tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json  mobile.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: assetserver.rs  downloads.rs  fileio.rs  lib.rs  main.rs
apps/tauri/src-tauri/src/scratchlink/: ble.rs  bt_android.rs  bt_ios.m  bt_ios.rs  bt_linux.rs  bt_macos.m  bt_macos.rs  bt_windows.rs  mod.rs
docs/: extension-compat.md
overlay/scratch-gui/: sw.js  webpack.config.js
overlay/scratch-gui/src/components/gui/: gui.jsx
overlay/scratch-gui/src/components/library-item/: library-item.css  library-item.jsx
overlay/scratch-gui/src/components/menu-bar/: menu-bar.jsx
overlay/scratch-gui/src/components/offline-library/: offline-library-modal.css  offline-library-modal.jsx
overlay/scratch-gui/src/components/stage-header/: stage-header.jsx
overlay/scratch-gui/src/components/tw-pseudocode/: pseudocode-importer.jsx
overlay/scratch-gui/src/components/tw-soundfx/: soundfx-generator.jsx
overlay/scratch-gui/src/containers/: extension-library.jsx  sound-tab.jsx
overlay/scratch-gui/src/lib/: app-state-hoc.jsx  crispfxr-core.js  download-blob.js  offline-assets.js  sb3-creator-javascript.js  sb3-creator-python.js  sb3-creator.js  storage.js  tauri-bridge.js  url-extensions.js
overlay/scratch-gui/src/lib/libraries/extensions/: index.jsx
overlay/scratch-gui/src/playground/: index.ejs  render-gui.jsx
overlay/scratch-gui/static/: manifest.webmanifest
overlay/scratch-gui/static/tts/: tts-worker.js
overlay/scratch-vm/src/extension-support/: extension-manager.js
overlay/scratch-vm/src/extensions/crispstrobe/: adapter.js
overlay/scratch-vm/src/extensions/crispstrobe/arrays/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/csp/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/ev3comprehensive/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/ev3dev/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/ev3lms/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/legoboostunified/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/legoev3direct/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/legonxt/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/legopoweredup/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/legospikeprimeBLE/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/planetemaths/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/spikeprime/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/spikeprimeBTC/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/spikeprimeBridge/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/spikeprimeble/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/text2speech/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/universalgamepad/: index.js
overlay/scratch-vm/src/extensions/crispstrobe/wedo2unified/: index.js
scripts/: apply-vm-overlay.mjs  build-library-pack.mjs  gen-rust-notices.mjs  integrate.mjs  vendor.mjs  vercel-build.sh  vercel-ignore.sh
