[package]
name = "brickwright-tauri"
version = "0.1.0"
description = "Brickwright native app (Tauri 2, all platforms)"
authors = ["CrispStrobe"]
edition = "2021"
rust-version = "1.77"

# The `_lib` library is what Tauri's mobile entry point links against; the
# `main.rs` binary is desktop-only and just calls into it.
[lib]
name = "brickwright_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-blec = "0.5"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
uuid = "1"
base64 = "0.22"

[features]
# Used by the desktop entrypoint (main.rs) to avoid the extra console window.
custom-protocol = ["tauri/custom-protocol"]
