[package]
name = "brickwright-tauri"
version = "0.1.0"
description = "Brickwright native app (Tauri 2, all platforms)"
authors = ["CrispStrobe"]
edition = "2021"
rust-version = "1.77"

# The `_lib` library is what Tauri's mobile entry point links against; the
# `main.rs` binary is desktop-only and just calls into it.
[lib]
name = "brickwright_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

# `devtools` ships the web inspector in release builds too (brickwright-ios had a
# web-inspector toggle); it's an educational tool, so the inspector staying
# available is a feature, not a leak.
[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-blec = "0.5"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
# Open external links (help/credits/docs) in the system browser instead of
# hijacking the editor webview. See overlay/.../tauri-bridge.js.
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
uuid = "1"
base64 = "0.22"
# On-demand asset/model downloads. rustls to stay OpenSSL-free / permissive
# across all platforms incl. mobile; `stream` for byte-progress on the one-file
# library pack.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
# Extract the one-file library pack (Option C — a single CC BY-SA zip instead of
# ~1300 individual CDN requests).
zip = { version = "2", default-features = false, features = ["deflate"] }

# Mobile-only: OS share sheet (sender side of the project share round-trip).
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri-plugin-share = "2"

# Linux Bluetooth-Classic (RFCOMM/SPP) backend, for EV3 + legacy SPIKE.
[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm"] }

# Windows Bluetooth-Classic (RFCOMM/SPP) backend via WinRT.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Devices_Bluetooth_Rfcomm",
    "Devices_Enumeration",
    "Networking",
    "Networking_Sockets",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
] }

# Android Bluetooth-Classic (RFCOMM/SPP) via JNI into android.bluetooth.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
# Used by the desktop entrypoint (main.rs) to avoid the extra console window.
custom-protocol = ["tauri/custom-protocol"]
